# goetia

./: .gitattributes  .gitignore  AGENTS.md  API_CONTRACT.md  BUILD_NOTES.md  Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml  rustfmt.toml
.claude/agents/: content-smith.md  engine-warden.md  feel-critic.md
.claude/commands/: balance.md  forge.md  playtest.md
.claude/skills/forge/: SKILL.md
.githooks/: pre-push
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  smoke.yml
crates/goetia/: Cargo.toml
crates/goetia/src/: app.rs  floaters.rs  input.rs  lib.rs  overlay.rs
crates/goetia_audio/: Cargo.toml
crates/goetia_audio/src/: lib.rs
crates/goetia_combat/: Cargo.toml
crates/goetia_combat/src/: lib.rs  spatial.rs  stats.rs  status.rs  triggers.rs
crates/goetia_core/: Cargo.toml
crates/goetia_core/src/: ecs.rs  events.rs  hash.rs  jobs.rs  lib.rs  pcg.rs  schedule.rs  time.rs
crates/goetia_data/: Cargo.toml
crates/goetia_data/src/: lib.rs  registry.rs  save.rs
crates/goetia_procgen/: Cargo.toml
crates/goetia_procgen/src/: lib.rs  rooms.rs  table.rs
crates/goetia_render/: Cargo.toml
crates/goetia_render/src/: camera.rs  lib.rs  mesh.rs  particles.rs  post.rs  ui.rs
crates/goetia_render/src/shaders/: mesh.wgsl  particles.wgsl  post.wgsl  ui.wgsl
demonicon/: BUILD_NOTES.md  Cargo.toml  README.md
demonicon/data/: affixes.ron  contracts.ron  enemies.ron  goetics.ron  naming.ron  realm_mods.ron  realms.ron  sigils.ron  skills.ron  statuses.ron
demonicon/data/realms/: andras_grammar.ron  andras_rooms.ron  buer_grammar.ron  buer_rooms.ron  vassago_grammar.ron  vassago_rooms.ron
demonicon/src/: combat.rs  content.rs  court.rs  enemies.rs  fx.rs  game.rs  items.rs  lib.rs  loot.rs  main.rs  render.rs  run.rs  save.rs  skills.rs  ui.rs  vocab.rs
demonicon/tests/: acceptance.rs
sandbox/: Cargo.toml
sandbox/data/: grammar.ron  rooms.ron
sandbox/src/: horde.rs  lib.rs  main.rs
sandbox/tests/: determinism.rs
