[workspace]
resolver = "2"
members = [
    "crates/goetia_core",
    "crates/goetia_combat",
    "crates/goetia_procgen",
    "crates/goetia_data",
    "crates/goetia_audio",
    "crates/goetia_render",
    "crates/goetia",
    "sandbox",
    "demonicon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
goetia_core = { path = "crates/goetia_core" }
goetia_combat = { path = "crates/goetia_combat" }
goetia_procgen = { path = "crates/goetia_procgen" }
goetia_data = { path = "crates/goetia_data" }
goetia_audio = { path = "crates/goetia_audio" }
goetia_render = { path = "crates/goetia_render" }
goetia = { path = "crates/goetia" }

glam = { version = "0.29", features = ["serde", "bytemuck"] }
serde = { version = "1", features = ["derive"] }
ron = "0.8"
# default-features off: no getrandom/runtime-rng — deterministic hasher keys,
# and avoids raw-dylib dlltool trouble on windows-gnu.
ahash = { version = "0.8", default-features = false, features = ["std", "serde"] }
bytemuck = { version = "1", features = ["derive"] }
wgpu = "22.1"
winit = { version = "0.29", features = ["rwh_06"] }
pollster = "0.3"
rodio = "0.19"
log = "0.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
