[package]
name = "goetia"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
goetia_core = { workspace = true }
goetia_combat = { workspace = true }
goetia_procgen = { workspace = true }
goetia_data = { workspace = true }
goetia_audio = { workspace = true }
goetia_render = { workspace = true }
glam = { workspace = true }
winit = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
log = { workspace = true }
