[package]
name = "goetia_render"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
goetia_core = { workspace = true }
glam = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
bytemuck = { workspace = true }
pollster = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
